# HW11_FastApi_v3.0

./: main.py  pyproject.toml  schemas.py
database/: db.py  models.py
project_name/: pyproject.toml
repository/: notes.py  tegs.py  users.py
routes/: notes.py  tags.py
src/: pyproject.toml
